# Packetorio

./: .gitignore  README.md  fix_timestamps.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
godot/: gdr-mws.gdextension  gdr-mws.gdextension.uid  project.godot
godot/assets/audio/: mws_2.mp3.import  mws_3.mp3.import  test.mp3.import
godot/assets/fonts/: DotGothic16-Regular.ttf.import  k8x12.ttf.import  misaki_gothic.ttf.import  x12y16pxMaruMonica.ttf.import
godot/assets/images/: bg.aseprite  bg.png.import  buildings_menu_bg.aseprite  buildings_menu_bg.png.import  button_icon.aseprite  button_icon.png.import  (+36 more)
godot/resources/: main_menu.tres
godot/scenes/: main.gd.uid  main.tscn  packet_test.tscn
godot/scripts/: game_settings.gd.uid  packet_test.gd  packet_test.gd.uid
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  map_controller.rs
rust/src/core/: building.rs  building_defs.rs  dto.rs  filters.rs  mod.rs  packet.rs
rust/src/core/buildings/: conveyor.rs  datacenter.rs  internet.rs  junction.rs  mod.rs  recycle_bin.rs
rust/src/core/buildings/filters/: content_filter.rs  ip_filter.rs  length_filter.rs  mod.rs  port_filter.rs  protocol_filter.rs
rust/src/logic/: building_map.rs  building_storage.rs  connection_graph.rs  mod.rs  packet_completion.rs
rust/src/map_controller/: packet_export.rs  tests.rs
rust/src/packet/: helpers.rs  json_loader.rs  mod.rs  model.rs  pcap_capture.rs  pcap_frame.rs  pcap_loader.rs  traffic.rs
rust/src/tests/: mod.rs  test_filters.rs  test_map_controller.rs  test_packet_completion.rs
(+152 files in other folders)
