[package]
name = "gdr-mws"
version = "0.1.0"
edition = "2024"

[dependencies]
etherparse = "0.19.0"
godot = "0.3.5"
ipnetwork = { version = "0.20", features = ["serde"] }
pcap-file = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
regex = "1.11.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[profile.dev]
lto = true
